# iPic3D

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  iPic3D  iPic3D.cbp  iPic3D.cpp
PSKOutput3D/: PSKhdf5adaptor.cpp
bc/: BcFields3D.cpp  BcParticles.cpp
communication/: ComBasic3D.cpp  ComInterpNodes3D.cpp  ComNodes3D.cpp  ComParser3D.cpp  ComParticles3D.cpp  VCtopology3D.cpp
data/: ConservedQuantities.txt  SimulationData.txt  VirtualSatelliteTraces0.txt  settings.hdf
fields/: BCStructure.cpp  EMfields3D.cpp
grids/: Grid3DCU.cpp
include/: Basic.h  EMfields3D.h  Particles3D.h  Particles3Dcomm.h  matrix3d.h
inputfiles/: GEM.inp  shock.inp
inputoutput/: Collective.cpp  ParallelIO.cpp  Restart3D.cpp  phdf5.cpp
main/: iPic3Dlib.cpp
mathlib/: EllipticF.cpp  matrix3d.cpp  vector3d.cpp
particles/: Particles3D.cpp  Particles3Dcomm.cpp
performances/: Timing.cpp
solvers/: CG.cpp  GMRES.cpp
utility/: asserts.cpp  debug.cpp
